# turtlebot3-ros2-gui

./: .gitignore  README_CN.md  package.xml  setup.cfg  setup.py  start_robot_gui.sh
.claude/: settings.local.json
robot_gui/: __init__.py  gazebo_view.py  main.py  main_window.py  map_widget.py  process_manager.py  ros_node.py
robot_gui/config/: __init__.py  dwa_params.yaml  mppi_params.yaml  teb_params.yaml
robot_gui/gazebo/: gui_camera.sdf
tests/: conftest.py  test_image_convert.py  test_map_coords.py  test_quaternion.py
