[metadata]
name = robot_gui
version = 1.0.0
description = 基于 ROS2 + PyQt5 的机器人仿真控制 GUI 平台
author = Robot Student
author_email = student@example.com
license = Apache License 2.0

[options]
python_requires = >=3.8
packages = find:
install_requires =
    PyQt5 >= 5.15

[options.package_data]
robot_gui.config = *.yaml
robot_gui.gazebo = *.sdf

[develop]
script-dir = $base/lib/robot_gui

[install]
install-scripts = $base/lib/robot_gui
